<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setup_solo_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cow006.gui.SetupSoloGameActivity">

    <TextView
        android:text="@string/bot_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/botNumberText"
        android:layout_alignParentLeft="true" />

    <TextView
        android:text="@string/bot_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botNumberSeekBar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/botLevelText"
        android:layout_alignParentLeft="true" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="9"
        android:progress="3"
        android:id="@+id/botNumberSeekBar"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/botNumberText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="3"
        android:layout_marginTop="16dp"
        android:id="@+id/botLevelSeekBar"
        android:layout_below="@+id/botLevelText"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_alignParentLeft="true" />

    <Button
        android:text="@string/start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botLevelSeekBar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/startGame"
        android:onClick="startGame"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
